[package]
name = "tls-impersonate-openssl"
version = "0.1.0"
authors = ["Caido Labs Inc. <dev@caido.io>"]
description = "Library for TLS impersonification"
repository = "https://github.com/caido/tls-impersonate"
license = "MIT"
edition = "2021"
autotests = false

[lib]
name = "tls_impersonate_openssl"
path = "src/lib.rs"

[[test]]
name = "tls_impersonate_openssl"
path = "tests/lib.rs"
harness = true

[dependencies]
tls-impersonate = { version = "0.1.0", path = "../tls-impersonate" }
openssl = "0.10"
openssl-sys = "0.9"
typed-builder = "0.20"

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tls-impersonate-test = { version = "0.1.0", path = "../tls-impersonate-test" }
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
